-- ircd-hybrid-8.0.5 Release Notes
o) IMPORTANT: nick and topic lengths are now configurable via ircd.conf.
   A max_nick_length, as well as a max_topic_length configuration option
   can now be found in the serverinfo{} block
o) Fixed build on GNU/Hurd as reported by Dominic Hargreaves
o) Fixed log files not getting reopened after /rehash
o) Improved logging of configuration file issues
o) ircd.pid has been accidentally saved in /var instead of /var/run
o) Linux RT signal support for notification of socket events has been dropped
o) Fixed "STATS Y|y" sometimes sending weird sendq/recvq values
o) INFO now also shows configured values of 'disable_fake_channels',
   and 'stats_e_disabled'


-- ircd-hybrid-8.0.4 Release Notes
o) Fixed possible core on USERHOST/ISON with optimization enabled
o) Fixed bug where can_flood sometimes didn't work as expected


-- ircd-hybrid-8.0.3 Release Notes
o) Fixed core on UNDLINE
o) XLINE/KLINE/RESV/DLINE/SQUIT and KILL now have the same default reason
   if a reason hasn't been specified


-- ircd-hybrid-8.0.2 Release Notes
o) Minor updates to the build system
o) Fixed broken --enable-assert configure switch
o) Fixed bug where timed events stopped from working if the system's
   clock is running backwards
o) STATS q|Q now shows how many times a resv{} block has been matched
o) Fixed contributed WEBIRC module
o) IRC operators may now again see server generated nick rejection notices


-- ircd-hybrid-8.0.1 Release Notes
o) Fixed broken CIDR support for CHALLENGE based irc operator logins
o) Fixed class limits not properly applying to oper{} blocks
o) Fixed possible TBURST desynchronization with services
o) Fixed TBURST sending server's name to clients if it's a hidden server


-- ircd-hybrid-8.0.0 Release Notes
o) Fixed an off-by-one with spoofs. Spoofs are now also checked for
   invalid characters
o) Removed general::use_whois_actually configuration directive. This is
   now enabled by default
o) Minor SQUIT handling fixes